@@ -113,15 +113,11 @@ EXTRA_DIST += \
 kpseincludedir = ${includedir}/kpathsea
 
 nodist_kpseinclude_HEADERS = \
+	c-auto.h \
 	kpathsea.h \
 	paths.h
 
-kpseinclude_HEADERS = config.h c-auto.h $(direct_headers) $(indirect_headers)
-
-kpselibdir = ${libdir}/kpathsea
-
-nodist_kpselib_HEADERS = \
-	c-auto.h
+kpseinclude_HEADERS = config.h $(direct_headers) $(indirect_headers)
 
 # Headers included directly into kpathsea.h
 #
@@ -328,4 +324,3 @@ include $(srcdir)/../../am/rebuild.am
 ## Not used
 ##
 EXTRA_DIST += mktex.cnf
-
